--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ donate_url: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id
 
 enforce_ssl: insidious-src.github.io
 url: https://insidious-src.github.io
-baseurl: /
+url_dir: /
 timezone: Europe/London
 encoding: utf-8
 permalink: /:categories/:title/
