--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,12 @@ sitemap: 'exclude'
 	"name": "{{ site.title }}",
 	"icons": [
 		{
-			"src": "\{{ site.baseurl }}android-chrome-192x192.png",
+			"src": "\{{ site.url_dir }}android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image\/png"
 		},
 		{
-			"src": "\{{ site.baseurl }}android-chrome-512x512.png",
+			"src": "\{{ site.url_dir }}android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image\/png"
 		}
