_config.yml changes

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: The Insidious One
 description: Personal Portfolio, IT Support
 tagline: C++ Programmer / Web Developer / Designer based in Burgas, Bulgaria
 keywords: it,personal,portfolio,project,projects,contact,library,website,web development,developing,technologies,design,art,freelance,developer,building websites,wallpaper,logo,photo,photoshop,html5,css3,javascript,3d modeling,programming,c++,cxx,c,c99,c11,cxx11,c++11,krita,blender,electronics,engine,support
-author: Kiril Petrov
-slogan: Absolute determination. When I do something I just don’t care how hard it is.
+author: K. Petrov
+slogan: Absolute determination
 first_published: 2008
 email: fymfifa@gmail.com
 donate_url: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=WMW75J9ZWHXAU
@@ -20,8 +20,8 @@ google_analytics_id: UA-86048189-3
 
 freelance_status: available
 freelance_message:
-    available: I am currently available for hire. Feel <del>free</del> obligated to contact me at any time.
-    busy: I am probably working on some big project right now and can't really take your order.
+    available: I am currently available for hire. Feel free to contact me at any time.
+    busy: I am probably working on some project right now and can't take your order.
     away: I am not taking any orders at this time. Check back in a few days.
 
 social:
