config footer icons updated

--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,8 @@ social:
     #forumbee:
     #tripadvisor:
     #amazon:
+    html5: https://validator.w3.org/nu/?doc=https%3A%2F%2Finsidious-src.github.io%2F
+    css3: https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Finsidious-src.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en#css
 
 # Build settings
 markdown: kramdown
