config update; posts fixed;

--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,12 @@ donate_url: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id
 
 enforce_ssl: insidious-src.github.io
 url: https://insidious-src.github.io
+#enforce_ssl: k-petrov.online
+#url: https://k-petrov.online
 url_dir: /
 timezone: Europe/Sofia
 encoding: utf-8
 permalink: /:categories/:title/
-future: true
 newsfeed_max: 4
 google_analytics_id: UA-86048189-3
 
