updated config file

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ social:
     #flickr:
     #instagram:
     youtube-square: https://www.youtube.com/user/fymfifa
-    #spotify:
+    spotify: https://open.spotify.com/user/fymfifa
     #stack-overflow:
     #vimeo:
     #reddit:
@@ -44,7 +44,7 @@ social:
     #delicious:
     #pied-piper:
     #digg:
-    #soundcloud:
+    soundcloud: https://soundcloud.com/insidious_one
     #deviantart:
     #angellist:
     #tumblr-square:
