updated config yml;

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
-title: K. Petrov
+title: The Insidious One
+#title: K. Petrov
 description: Personal Portfolio, IT Support
 tagline: C++ Programming / Web Development / Electronics
 keywords: it,personal,portfolio,project,projects,contact,library,website,web development,developing,technologies,design,art,freelance,developer,building websites,wallpaper,logo,photo,photoshop,html5,css3,javascript,3d modeling,programming,c++,cxx,c,c99,c11,cxx11,c++11,krita,blender,electronics,engine,support
