updated site title;

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: The Insidious One
 description: Personal Portfolio, IT Support
-tagline: C++ Programming / Web Development / Electronics
-keywords: it,personal,portfolio,project,projects,contact,library,website,web development,developing,technologies,design,art,freelance,developer,building websites,wallpaper,logo,photo,photoshop,html5,css3,javascript,3d modeling,programming,c++,cxx,c,c99,c11,cxx11,c++11,krita,blender,electronics,engine,support
+tagline: C/C++ Programming / Web Development / Electronics
+keywords: it,personal,portfolio,project,projects,contact,library,website,web development,developing,technologies,design,art,freelance,developer,building websites,wallpaper,logo,photo,photoshop,html5,css3,javascript,3d modeling,programming,c++,cxx,c,c99,c11,cxx11,c++11,cxx14,c++14,cxx17,c++17,cxx20,c++20,cxx23,c++23,krita,blender,electronics,engine,support,quality
 author: K. Petrov
 slogan: Absolute Determination
 first_published: 2008
