--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ _site
 .ftpconfig
 sftp-config.json
 ftpsync.settings
+.qtc_clangd
 
 # Windows image file caches
 Thumbs.db
@@ -18,7 +19,7 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
-
+.qtc_clangd
 # Windows Installer files
 *.cab
 *.msi
