updated donation link;

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ author: K. Petrov
 slogan: Absolute Determination
 first_published: 2008
 email: fymfifa@gmail.com
-donate_url: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=WMW75J9ZWHXAU
+donate_url: https://www.paypal.com/donate/?hosted_button_id=QEQLYAGDHRHUQ
+#donate_url: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=WMW75J9ZWHXAU
 
 enforce_ssl: insidious-src.github.io
 url: https://insidious-src.github.io
